# gitforai

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_classifier_integration.py
.beads/: issues.jsonl
docs/: DOCKER.md  USER_GUIDE.md
scripts/: build_wiki.py  check_wiki_drift.py  install_wiki_hook.py  publish_wiki.py  sync_wiki.py
src/gitforai/: __init__.py  cli.py
src/gitforai/extraction/: __init__.py  git_extractor.py
src/gitforai/incremental/: __init__.py  delta.py  manager.py  state.py
src/gitforai/integrations/: beads.py  document_classifier.py  replay.py  unified.py
src/gitforai/llm/: __init__.py  anthropic_provider.py  base.py  cache.py  embeddings.py  local_provider.py  openai_provider.py  processor.py  prompts.py
src/gitforai/models/: __init__.py  commit.py  config.py
src/gitforai/storage/: __init__.py  chroma_client.py  config.py  query.py  schema.py  vector_store.py
src/gitforai/wiki/: __init__.py  drift.py  identity.py  merge.py  orchestrator.py  prompts.py  renderer.py  store.py
tests/: test_incremental_state.py
tests/unit/: test_cache.py  test_embeddings.py  test_extraction.py  test_local_provider.py  test_openai_provider.py  test_processor.py  test_storage.py
wiki/: Home.md  Integrations-a2ef4e2d.md  _Sidebar.md
